# my_workspace

./: .gitignore  FINAL_TEST_REPORT_95_COVERAGE.md  README.md  SUCCESS_REPORT_96_PERCENT_COVERAGE.md  TEST_EXECUTION_FINAL_REPORT.md  TEST_EXECUTION_REPORT.md  TEST_SUMMARY.md  design.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  register_users.py  run_tests.py  start.bat  start.sh  test_all.bat
backend/: Dockerfile  README.md  README_REFACTORED.md  __init__.py  add_sample_data.py  auth_requirements.txt  create_test_user.py  database.py  docker-compose.yml  init_data.py  main.py  main_refactored.py  migrate_db.py  models.py  pyproject.toml  pyproject_refactored.toml  pytest_simple.ini  requirements.txt  schemas.py  utils.py
backend/app/booking/: booking_controller.py  booking_repository.py  booking_service.py
backend/routes/: checkin.py  flights.py  passengers.py
backend/tests/: conftest.py  test_95_coverage.py  test_95_plus_coverage.py  test_additional_coverage.py  test_api_endpoints.py  test_api_endpoints_mocked.py  test_api_integration.py  test_auth.py  test_auth_coverage_100.py  test_auth_routes.py  test_auth_suite_verification.py  test_enterprise_coverage.py  test_final_95.py  test_final_coverage.py  test_flight_service.py  test_integration_comprehensive.py  test_minimal_95.py  test_protected_endpoints.py  test_repositories.py  test_repositories_comprehensive.py  test_repositories_mocked.py  test_schemas.py  test_schemas_comprehensive.py  test_services.py  test_user_models.py  test_utils.py  test_utils_comprehensive.py  test_working_coverage.py
(+71 files in other folders)
