[project]
name = "flight-checkin-api"
version = "0.1.0"
description = "Flight web check-in API with PostgreSQL"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "sqlalchemy==2.0.23",
    "asyncpg==0.29.0",
    "pydantic[email]==2.5.0",
    "python-multipart==0.0.6",
    "alembic==1.13.1",
    "email-validator==2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "httpx==0.25.2",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-report=html --cov-report=term-missing --cov-fail-under=50"
testpaths = ["tests"]
asyncio_mode = "auto"